Checker/DimensionDefinitionLanguage/c.output
   0  $accept : line_list $end

   1  line_list : line
   2            | line_list line

   3  line : dimension_expression END

   4  dimension_expression : arg
   5                       | list
   6                       | arg RULE arg
   7                       | arg RULE list
   8                       | list RULE arg
   9                       | list RULE list
  10                       | arg RULE arg REW arg
  11                       | arg RULE arg REW list
  12                       | arg RULE list REW arg
  13                       | arg RULE list REW list
  14                       | list RULE arg REW arg
  15                       | list RULE arg REW list
  16                       | list RULE list REW arg
  17                       | list RULE list REW list

  18  list : chain

  19  chain : arg
  20        | FUNC_S chain FUNC_E
  21        | FUNC_S FUNC_E
  22        | chain LIST chain
  23        | chain chain

  24  arg : ARGEX
  25      | ARGEX DIM
  26      | LABEL ARGEX
  27      | LABEL ARGEX DIM
  28      | arg arg

state 0
	$accept : . line_list $end  (0)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	line_list  goto 4
	line  goto 5
	dimension_expression  goto 6
	arg  goto 7
	list  goto 8
	chain  goto 9


state 1
	arg : ARGEX .  (24)
	arg : ARGEX . DIM  (25)

	DIM  shift 10
	ARGEX  reduce 24
	LIST  reduce 24
	FUNC_S  reduce 24
	FUNC_E  reduce 24
	RULE  reduce 24
	REW  reduce 24
	LABEL  reduce 24
	END  reduce 24


state 2
	chain : FUNC_S . chain FUNC_E  (20)
	chain : FUNC_S . FUNC_E  (21)

	ARGEX  shift 1
	FUNC_S  shift 2
	FUNC_E  shift 11
	LABEL  shift 3
	.  error

	arg  goto 12
	chain  goto 13


state 3
	arg : LABEL . ARGEX  (26)
	arg : LABEL . ARGEX DIM  (27)

	ARGEX  shift 14
	.  error


state 4
	$accept : line_list . $end  (0)
	line_list : line_list . line  (2)

	$end  accept
	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	line  goto 15
	dimension_expression  goto 6
	arg  goto 7
	list  goto 8
	chain  goto 9


state 5
	line_list : line .  (1)

	.  reduce 1


state 6
	line : dimension_expression . END  (3)

	END  shift 16
	.  error


7: shift/reduce conflict (shift 1, reduce 19) on ARGEX
7: shift/reduce conflict (shift 17, reduce 19) on RULE
7: shift/reduce conflict (shift 3, reduce 19) on LABEL
7: reduce/reduce conflict (reduce 4, reduce 19) on END
state 7
	dimension_expression : arg .  (4)
	dimension_expression : arg . RULE arg  (6)
	dimension_expression : arg . RULE list  (7)
	dimension_expression : arg . RULE arg REW arg  (10)
	dimension_expression : arg . RULE arg REW list  (11)
	dimension_expression : arg . RULE list REW arg  (12)
	dimension_expression : arg . RULE list REW list  (13)
	chain : arg .  (19)
	arg : arg . arg  (28)

	ARGEX  shift 1
	RULE  shift 17
	LABEL  shift 3
	LIST  reduce 19
	FUNC_S  reduce 19
	END  reduce 4

	arg  goto 18


state 8
	dimension_expression : list .  (5)
	dimension_expression : list . RULE arg  (8)
	dimension_expression : list . RULE list  (9)
	dimension_expression : list . RULE arg REW arg  (14)
	dimension_expression : list . RULE arg REW list  (15)
	dimension_expression : list . RULE list REW arg  (16)
	dimension_expression : list . RULE list REW list  (17)

	RULE  shift 19
	END  reduce 5


state 9
	list : chain .  (18)
	chain : chain . LIST chain  (22)
	chain : chain . chain  (23)

	ARGEX  shift 1
	LIST  shift 20
	FUNC_S  shift 2
	LABEL  shift 3
	RULE  reduce 18
	REW  reduce 18
	END  reduce 18

	arg  goto 12
	chain  goto 21


state 10
	arg : ARGEX DIM .  (25)

	.  reduce 25


state 11
	chain : FUNC_S FUNC_E .  (21)

	.  reduce 21


12: shift/reduce conflict (shift 1, reduce 19) on ARGEX
12: shift/reduce conflict (shift 3, reduce 19) on LABEL
state 12
	chain : arg .  (19)
	arg : arg . arg  (28)

	ARGEX  shift 1
	LABEL  shift 3
	LIST  reduce 19
	FUNC_S  reduce 19
	FUNC_E  reduce 19
	RULE  reduce 19
	REW  reduce 19
	END  reduce 19

	arg  goto 18


state 13
	chain : FUNC_S chain . FUNC_E  (20)
	chain : chain . LIST chain  (22)
	chain : chain . chain  (23)

	ARGEX  shift 1
	LIST  shift 20
	FUNC_S  shift 2
	FUNC_E  shift 22
	LABEL  shift 3
	.  error

	arg  goto 12
	chain  goto 21


state 14
	arg : LABEL ARGEX .  (26)
	arg : LABEL ARGEX . DIM  (27)

	DIM  shift 23
	ARGEX  reduce 26
	LIST  reduce 26
	FUNC_S  reduce 26
	FUNC_E  reduce 26
	RULE  reduce 26
	REW  reduce 26
	LABEL  reduce 26
	END  reduce 26


state 15
	line_list : line_list line .  (2)

	.  reduce 2


state 16
	line : dimension_expression END .  (3)

	.  reduce 3


state 17
	dimension_expression : arg RULE . arg  (6)
	dimension_expression : arg RULE . list  (7)
	dimension_expression : arg RULE . arg REW arg  (10)
	dimension_expression : arg RULE . arg REW list  (11)
	dimension_expression : arg RULE . list REW arg  (12)
	dimension_expression : arg RULE . list REW list  (13)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	arg  goto 24
	list  goto 25
	chain  goto 9


18: shift/reduce conflict (shift 1, reduce 28) on ARGEX
18: shift/reduce conflict (shift 3, reduce 28) on LABEL
state 18
	arg : arg . arg  (28)
	arg : arg arg .  (28)

	ARGEX  shift 1
	LABEL  shift 3
	LIST  reduce 28
	FUNC_S  reduce 28
	FUNC_E  reduce 28
	RULE  reduce 28
	REW  reduce 28
	END  reduce 28

	arg  goto 18


state 19
	dimension_expression : list RULE . arg  (8)
	dimension_expression : list RULE . list  (9)
	dimension_expression : list RULE . arg REW arg  (14)
	dimension_expression : list RULE . arg REW list  (15)
	dimension_expression : list RULE . list REW arg  (16)
	dimension_expression : list RULE . list REW list  (17)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	arg  goto 26
	list  goto 27
	chain  goto 9


state 20
	chain : chain LIST . chain  (22)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	arg  goto 12
	chain  goto 28


21: shift/reduce conflict (shift 1, reduce 23) on ARGEX
21: shift/reduce conflict (shift 20, reduce 23) on LIST
21: shift/reduce conflict (shift 2, reduce 23) on FUNC_S
21: shift/reduce conflict (shift 3, reduce 23) on LABEL
state 21
	chain : chain . LIST chain  (22)
	chain : chain . chain  (23)
	chain : chain chain .  (23)

	ARGEX  shift 1
	LIST  shift 20
	FUNC_S  shift 2
	LABEL  shift 3
	FUNC_E  reduce 23
	RULE  reduce 23
	REW  reduce 23
	END  reduce 23

	arg  goto 12
	chain  goto 21


state 22
	chain : FUNC_S chain FUNC_E .  (20)

	.  reduce 20


state 23
	arg : LABEL ARGEX DIM .  (27)

	.  reduce 27


24: shift/reduce conflict (shift 1, reduce 19) on ARGEX
24: shift/reduce conflict (shift 29, reduce 19) on REW
24: shift/reduce conflict (shift 3, reduce 19) on LABEL
24: reduce/reduce conflict (reduce 6, reduce 19) on END
state 24
	dimension_expression : arg RULE arg .  (6)
	dimension_expression : arg RULE arg . REW arg  (10)
	dimension_expression : arg RULE arg . REW list  (11)
	chain : arg .  (19)
	arg : arg . arg  (28)

	ARGEX  shift 1
	REW  shift 29
	LABEL  shift 3
	LIST  reduce 19
	FUNC_S  reduce 19
	END  reduce 6

	arg  goto 18


state 25
	dimension_expression : arg RULE list .  (7)
	dimension_expression : arg RULE list . REW arg  (12)
	dimension_expression : arg RULE list . REW list  (13)

	REW  shift 30
	END  reduce 7


26: shift/reduce conflict (shift 1, reduce 19) on ARGEX
26: shift/reduce conflict (shift 31, reduce 19) on REW
26: shift/reduce conflict (shift 3, reduce 19) on LABEL
26: reduce/reduce conflict (reduce 8, reduce 19) on END
state 26
	dimension_expression : list RULE arg .  (8)
	dimension_expression : list RULE arg . REW arg  (14)
	dimension_expression : list RULE arg . REW list  (15)
	chain : arg .  (19)
	arg : arg . arg  (28)

	ARGEX  shift 1
	REW  shift 31
	LABEL  shift 3
	LIST  reduce 19
	FUNC_S  reduce 19
	END  reduce 8

	arg  goto 18


state 27
	dimension_expression : list RULE list .  (9)
	dimension_expression : list RULE list . REW arg  (16)
	dimension_expression : list RULE list . REW list  (17)

	REW  shift 32
	END  reduce 9


28: shift/reduce conflict (shift 3, reduce 22) on LABEL
state 28
	chain : chain . LIST chain  (22)
	chain : chain LIST chain .  (22)
	chain : chain . chain  (23)

	LIST  shift 20
	LABEL  shift 3
	ARGEX  reduce 22
	FUNC_S  reduce 22
	FUNC_E  reduce 22
	RULE  reduce 22
	REW  reduce 22
	END  reduce 22

	arg  goto 12
	chain  goto 21


state 29
	dimension_expression : arg RULE arg REW . arg  (10)
	dimension_expression : arg RULE arg REW . list  (11)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	arg  goto 33
	list  goto 34
	chain  goto 9


state 30
	dimension_expression : arg RULE list REW . arg  (12)
	dimension_expression : arg RULE list REW . list  (13)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	arg  goto 35
	list  goto 36
	chain  goto 9


state 31
	dimension_expression : list RULE arg REW . arg  (14)
	dimension_expression : list RULE arg REW . list  (15)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	arg  goto 37
	list  goto 38
	chain  goto 9


state 32
	dimension_expression : list RULE list REW . arg  (16)
	dimension_expression : list RULE list REW . list  (17)

	ARGEX  shift 1
	FUNC_S  shift 2
	LABEL  shift 3
	.  error

	arg  goto 39
	list  goto 40
	chain  goto 9


33: shift/reduce conflict (shift 1, reduce 19) on ARGEX
33: shift/reduce conflict (shift 3, reduce 19) on LABEL
33: reduce/reduce conflict (reduce 10, reduce 19) on END
state 33
	dimension_expression : arg RULE arg REW arg .  (10)
	chain : arg .  (19)
	arg : arg . arg  (28)

	ARGEX  shift 1
	LABEL  shift 3
	LIST  reduce 19
	FUNC_S  reduce 19
	END  reduce 10

	arg  goto 18


state 34
	dimension_expression : arg RULE arg REW list .  (11)

	.  reduce 11


35: shift/reduce conflict (shift 1, reduce 19) on ARGEX
35: shift/reduce conflict (shift 3, reduce 19) on LABEL
35: reduce/reduce conflict (reduce 12, reduce 19) on END
state 35
	dimension_expression : arg RULE list REW arg .  (12)
	chain : arg .  (19)
	arg : arg . arg  (28)

	ARGEX  shift 1
	LABEL  shift 3
	LIST  reduce 19
	FUNC_S  reduce 19
	END  reduce 12

	arg  goto 18


state 36
	dimension_expression : arg RULE list REW list .  (13)

	.  reduce 13


37: shift/reduce conflict (shift 1, reduce 19) on ARGEX
37: shift/reduce conflict (shift 3, reduce 19) on LABEL
37: reduce/reduce conflict (reduce 14, reduce 19) on END
state 37
	dimension_expression : list RULE arg REW arg .  (14)
	chain : arg .  (19)
	arg : arg . arg  (28)

	ARGEX  shift 1
	LABEL  shift 3
	LIST  reduce 19
	FUNC_S  reduce 19
	END  reduce 14

	arg  goto 18


state 38
	dimension_expression : list RULE arg REW list .  (15)

	.  reduce 15


39: shift/reduce conflict (shift 1, reduce 19) on ARGEX
39: shift/reduce conflict (shift 3, reduce 19) on LABEL
39: reduce/reduce conflict (reduce 16, reduce 19) on END
state 39
	dimension_expression : list RULE list REW arg .  (16)
	chain : arg .  (19)
	arg : arg . arg  (28)

	ARGEX  shift 1
	LABEL  shift 3
	LIST  reduce 19
	FUNC_S  reduce 19
	END  reduce 16

	arg  goto 18


state 40
	dimension_expression : list RULE list REW list .  (17)

	.  reduce 17


State 7 contains 3 shift/reduce conflicts, 1 reduce/reduce conflict.
State 12 contains 2 shift/reduce conflicts.
State 18 contains 2 shift/reduce conflicts.
State 21 contains 4 shift/reduce conflicts.
State 24 contains 3 shift/reduce conflicts, 1 reduce/reduce conflict.
State 26 contains 3 shift/reduce conflicts, 1 reduce/reduce conflict.
State 28 contains 1 shift/reduce conflict.
State 33 contains 2 shift/reduce conflicts, 1 reduce/reduce conflict.
State 35 contains 2 shift/reduce conflicts, 1 reduce/reduce conflict.
State 37 contains 2 shift/reduce conflicts, 1 reduce/reduce conflict.
State 39 contains 2 shift/reduce conflicts, 1 reduce/reduce conflict.


17 terminals, 7 nonterminals
29 grammar rules, 41 states
